--- a/src/assets/quote.css
+++ b/src/assets/quote.css
@@ -10,7 +10,7 @@
 }
 .main-dashboard .quote {
 	font-size: 1rem;
-	margin: 0 0 1.5rem;
+	margin: -1rem 0 1.5rem;
 	background-color: rgba(255, 255, 255, 0.4);
 	padding: 1rem;
 }
